# mc-option-pricer

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: analysis.ipynb  analysis_executed.ipynb
src/mc_pricer/: __init__.py  analytics.py  benchmarks.py  engines.py  payoffs.py  processes.py  quasi_random.py  variance_reduction.py
tests/: test_analytics.py  test_engines.py  test_payoffs.py  test_processes.py  test_variance_reduction.py
